[project]
name = "learn-tvm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cython>=3.1.2",
    "numpy>=2.3.0",
    "scipy>=1.15.3",
    "setuptools>=80.9.0",
    "tvm",
    "uv>=0.7.13",
]

[tool.uv.sources]
tvm = { path = "../tvm/python", editable = true }
